# membrinicle

./: .gitignore  CLAUDE.md  COMMERCIAL.md  LICENSE  README.md  pyproject.toml
docs/: 2026-05-27-system-design.md
docs/adr/: adr-001-search-engine.md  adr-002-daemon-language.md  adr-003-license.md  adr-004-http-layer.md
